# cashier_copilot_audio_video_processor

./: .env.example  .gitignore  README.md  RUN_GUIDE.md  TRAIN_PRODUCT_DETECTOR.md  analytics_rois.py  analytics_violations.py  config.py  labels.txt  main.py  pyproject.toml  requirements.txt  run_cigarette_webcam.py  run_yolo.py  train_cigarette_detector.py  train_dataset1507_detector.py  train_dataset1_detector.py  train_product_detector.py  upload_roi_reference_image.py
audio/: __init__.py  rtsp_transcriber.py  silero_stt.py
audio_test/: main.py
callcenter/: desk_detector.py
camera/: __init__.py  rtsp_reader.py  video_file_reader.py
cashier_av_processor/: __init__.py  __main__.py  analytics_client.py  audio_stt.py  clip_exporter.py  config.py  daemon.py  db.py  detector.py  messages.py  video.py
dataset/: __init__.py  label_with_florence.py  object_collector.py  phi4_collector.py
logic/: __init__.py  checkout_state.py  product_counter.py  rules.py  service_checklist.py
migrations/: 001_cashier_monitoring_schema.sql
models/: __init__.py  detection.py  person.py
tests/: test_analytics_violations.py  test_checkout_speech_events.py  test_config.py  test_db.py  test_detector.py  test_hand_pose.py  test_product_counter.py  test_roi.py  test_service_checklist.py  test_transcript_filter.py
trackers/: bytetrack_retail.yaml
ui/: overlay.py
vision/: __init__.py  clip_classifier.py  person_action.py  person_detector.py  roi.py  scan_detector.py  vlm_crop_classifier.py
