[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cashier-copilot-audio-video-processor"
version = "0.1.0"
description = "Multiprocess RTSP video analytics and STT daemon for cashier copilot."
requires-python = ">=3.10"
dependencies = [
  "faster-whisper>=1.0.0",
  "numpy>=1.24",
  "opencv-python>=4.9",
  "psycopg2-binary>=2.9",
  "shapely>=2.0",
  "ultralytics>=8.3",
  "webrtcvad>=2.0.10",
]

[project.scripts]
cashier-av-daemon = "cashier_av_processor.daemon:main"
cashier-overlay-stream = "cashier_av_processor.overlay_stream:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cashier_av_processor*"]
